--- a/style.css
+++ b/style.css
@@ -295,10 +295,9 @@ body {
     bottom: 2rem;
     right: 2rem;
     display: flex;
+    flex-direction: column;
     gap: 1rem;
     z-index: 40;
-    flex-wrap: wrap;
-    justify-content: flex-end;
     max-width: 100%;
 }
 
